[package]
name = "maera"
version = "0.0.1"
edition = "2021"
description = "A monitor for periodically scraping websites with genuine browser fingerprints"
readme = "README.md"
repository = "https://github.com/xetera/maera"
license = "MIT"
keywords = ["scraping", "fingerprinting"]
categories = ["web-programming::http-client"]

[dependencies]
ratmom = { git = "https://codeberg.org/transcast/ratmom.git", features = ["impersonate-chrome", "text-decoding"], default-features = false, version = "0.1.0" }
async-trait = ">=0.1.67"
tokio = { version = ">=1.26.0",   features = ["full"] }
serde = { version = ">=1.0.126", features = ["derive"] }
serde_json = ">=1.0.59"
clokwerk = ">=0.4.0"
futures-io = ">=0.3.27"
cron = ">=0.12.0"
url = ">=2.2.2"

[lib]
crate-type = ["rlib"]
