[package]
name = "maera-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maera = { path = ".." }
async-trait = "0.1.67"
tokio = { version = ">=1.26.0",   features = ["full"] }
serde = { version = ">=1.0.126", features = ["derive"] }
serde_json = ">=1.0.59"
